--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,2 +1,14 @@
+.contained {
+  margin: 0 auto;
+  min-width: 500px;
+  max-width: 1200px;
+}
+
 canvas { border: 1px solid grey; }
+
+footer {
+  opacity: 0.8;
+  text-align: center;
+  padding-top: 1.2em;
+}
 
